# wgpu_playground

./: .gitignore  Cargo.toml  imgui_config.ini
crates/imgui_wgpu/: Cargo.toml
crates/imgui_wgpu/src/: imgui.wgsl  lib.rs
src/: app.rs  camera.rs  camera_controller.rs  egui_winit_platform.rs  gui.rs  main.rs  renderer.rs  vertex.rs
src/pipelines/: forward_pass.rs  gbuffer_geometry_pipeline.rs  main_pipeline.rs  mod.rs  render_pipeline.rs  shadow_pipeline.rs  skybox_pipeline.rs
src/shaders/: light.wgsl
