[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"
wgpu = "0.16"
async-std = "1.12"
bytemuck = { version = "1.13", features = [ "derive" ] }
anyhow = "1.0"
glam = "0.21"
futures-intrusive = "0.4"
png = "0.17"
egui = "0.22"
egui-wgpu = "0.22"

tobj = { version = "3.2", features = ["async"]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
