[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"
async-std = "1.12"
anyhow = "1.0"
glam = "0.21"
futures-intrusive = "0.4"
png = "0.17"

wgpu = "0.16"
bytemuck = { version = "1.13", features = [ "derive" ] }
imgui = "0.11"

imgui-winit-support = "0.11"

tobj = { version = "3.2", features = ["async"]}

imgui_wgpu = { path = "crates/imgui_wgpu" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
